--- a/views/admin/productForm.ejs
+++ b/views/admin/productForm.ejs
@@ -10,7 +10,7 @@
                 </div>
                 <div class="block-form">
                     <% include ../partials/messages %>
-                    <form action="/admin/addProduct" method="post">
+                    <form action="/admin/addProduct" method="post" enctype="multipart/form-data">
                         <div class="form-group">
                             <label class="col-md-auto control-label" for="sku"><b>SKU</b></label>
                             <div class="col-md-auto">
@@ -116,12 +116,12 @@
                         </div>
                         
                         <div class="form-group">
-                            <label class="col-md-auto control-label" for="file"><i class="fa fa-picture-o"></i><b>Upload Product Images</b></label>
+                            <label class="col-md-auto control-label" for="images"><i class="fa fa-picture-o"></i><b>Upload Product Images</b></label>
                             <div class="col-md-auto">
                                 <input 
                                 type="file" 
-                                name="file[]" 
-                                id="file" 
+                                name="images" 
+                                id="images" 
                                 class="form-control text-box" 
                                 multiple>
                             </div>
