--- a/public/css/Sidebar-Menu.css
+++ b/public/css/Sidebar-Menu.css
@@ -31,7 +31,7 @@
 }
 
 .sidebar-nav a, .dropdown-btn {
-   padding: 6px 8px 6px 16px;
+   padding: 3px 8px 6px 16px;
   text-decoration: none;
   font-size: 20px;
   color: #818181;
@@ -44,7 +44,7 @@
   outline: none;
 }
 
-.sidebar-nav a:hover {
+.sidebar-nav a:hover, .dropdown-btn:hover {
   text-decoration: none;
   color: #fff;
   background: rgba(255,255,255,0.2);
