--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 .block .form-group .text-box{
-    border: 1px solid black;
-    border-radius: 4px;
+    border: 1px solid white;
+    border-radius: 5px;
     box-sizing: border-box;
     width: 100%
 }
