--- a/views/admin/productForm.ejs
+++ b/views/admin/productForm.ejs
@@ -1,150 +1,166 @@
-<div class="container-fluid">
-    <div class="row justify-content-center">
-        <div class="col-lg-10 col-md-10 col-sm-12" style="border-radius: 15px; background-color: lightgray">
-            <div class="block mx-4 my-4">
-                <div class="mx-4 my-4 block-title">
-                    <h2>
-                        <i class="fa fa-plus"></i>
-                        <strong> Add </strong> New Product
-                    </h2>
-                </div>
-                <div class="block-form">
-                    <% include ../partials/messages %>
-                    <form action="/admin/addProduct" method="post" enctype="multipart/form-data">
-                        <div class="form-group">
-                            <label class="col-md-auto control-label" for="sku"><b>SKU</b></label>
-                            <div class="col-md-auto">
-                                <input 
-                                    class="form-control text-box"
-                                    type="text"
-                                    id="sku"
-                                    name="sku"
-                                    placeholder="Enter sku..."
-                                />
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-md-auto control-label" for="name"><b>Product Name</b></label>
-                            <div class="col-md-auto">
-                                <input 
-                                    class="form-control text-box"
-                                    type="text"
-                                    id="name"
-                                    name="name"
-                                    placeholder="Enter product name..."
-                                    />
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-md-auto control-label" for="description"><b>Description</b></label>
-                            <div class="col-md-auto">
-                                <input 
-                                    class="form-control text-box"
-                                    type="text"
-                                    id="description"
-                                    name="description"
-                                    placeholder="Enter product description..."
-                                    style="height:150px"
-                                />
-                            </div>
-                        </div>
+<div id="wrapper">
+
+    <% include ./sidebar-wrapper %>
+
+    <div class="page-content-wrapper">
+        
+        <% include ./header %>
+
+        <% include ./productReport %>
+        
+        <!-- Add product form -->
+        <div class="container-fluid">
+            <div class="row justify-content-center">
+                <div class="col-lg-10 col-md-10 col-sm-12" style="border-radius: 15px; background-color: lightgray">
+                    <div class="block mx-4 my-4">
                         
-                        <div class="form-group">
-                            <label class="col-md-auto control-label" for="categories"><b>Categories</b></label>
-                            <div class="col-md-auto">
-                                <select class="select-chosen text-box" id="categories" name="categories[]" data-role="tagsinput" multiple>
-                                    <option value="category1">Category 1</option>
-                                    <option value="category2">Category 2</option>
-                                    <option value="category3">Category 3</option>
-                                    <option value="category4">Category 4</option>
-                                </select>
-                            </div>
+                        <div class="mx-4 my-4 block-title">
+                            <h2>
+                                <i class="fa fa-plus"></i>
+                                <strong> Add </strong> New Product
+                            </h2>
                         </div>
-                        
-                        <div class="form-group">
-                            <label class="col-md-auto control-label" for="tags"><b>Tags</b></label>
-                            <div class="col-md-auto">
-                                <input 
-                                    class="form-control text-box"
-                                    type="text"
-                                    id="tags"
-                                    name="tags"
-                                    placeholder="Examples: clothes, shirt..."
-                                />
-                            </div>
+                        <div class="block-form">
+                            <% include ../partials/messages %>
+                            <form action="/admin/addProduct" method="post" enctype="multipart/form-data">
+                                <div class="form-group">
+                                    <label class="col-md-auto control-label" for="sku"><b>SKU</b></label>
+                                    <div class="col-md-auto">
+                                        <input 
+                                            class="form-control text-box"
+                                            type="text"
+                                            id="sku"
+                                            name="sku"
+                                            placeholder="Enter sku..."
+                                        />
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-md-auto control-label" for="name"><b>Product Name</b></label>
+                                    <div class="col-md-auto">
+                                        <input 
+                                            class="form-control text-box"
+                                            type="text"
+                                            id="name"
+                                            name="name"
+                                            placeholder="Enter product name..."
+                                            />
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-md-auto control-label" for="description"><b>Description</b></label>
+                                    <div class="col-md-auto">
+                                        <textarea 
+                                            class="form-control text-box"
+                                            type="text"
+                                            id="description"
+                                            name="description"
+                                            placeholder="Enter product description..."
+                                            rows="5"
+                                        ></textarea>
+                                    </div>
+                                </div>
+                                
+                                <div class="form-group">
+                                    <label class="col-md-auto control-label" for="categories"><b>Categories</b></label>
+                                    <div class="col-md-auto">
+                                        <select class="select-chosen text-box" id="categories" name="categories[]" data-role="tagsinput" multiple>
+                                            <option value="category1">Category 1</option>
+                                            <option value="category2">Category 2</option>
+                                            <option value="category3">Category 3</option>
+                                            <option value="category4">Category 4</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                
+                                <div class="form-group">
+                                    <label class="col-md-auto control-label" for="tags"><b>Tags</b></label>
+                                    <div class="col-md-auto">
+                                        <input 
+                                            class="form-control text-box"
+                                            type="text"
+                                            id="tags"
+                                            name="tags"
+                                            placeholder="Examples: clothes, shirt..."
+                                        />
+                                    </div>
+                                </div>
+                                
+                                <div class="form-group">
+                                    <label class="col-md-auto control-label" for="quantity"><b>Quantity</b></label>
+                                    <div class="col-md-auto">
+                                        <input 
+                                            class="form-control text-box"
+                                            type="number"
+                                            id="quantity"
+                                            name="quantity"
+                                            placeholder="Enter the number of products"
+                                        />
+                                    </div>
+                                </div>
+                                
+                                <div class="form-group">
+                                    <label class="col-md-auto control-label" for="regularPrice"><b>Regular Price</b></label>
+                                    <div class="col-md-auto">
+                                        <i class="fa fa-usd"></i>
+                                        <input 
+                                            class="form-control text-box"
+                                            type="number"
+                                            id="regularPrice"
+                                            name="regularPrice"
+                                            placeholder="0.000"
+                                        />
+                                    </div>
+                                </div>
+                                
+                                <div class="form-group">
+                                    <label class="col-md-auto control-label" for="discountPrice"><b>Discount Price</b></label>
+                                    <div class="col-md-auto">
+                                        <i class="fa fa-usd"></i>
+                                        <input 
+                                        class="form-control text-box"
+                                        type="number"
+                                        id="discountPrice"
+                                        name="discountPrice"
+                                        placeholder="0.000"
+                                        />
+                                    </div>
+                                </div>
+                                
+                                <div class="form-group">
+                                    <label class="col-md-auto control-label" for="images"><i class="fa fa-picture-o"></i><b>Upload Product Images</b></label>
+                                    <div class="col-md-auto">
+                                        <input 
+                                        type="file" 
+                                        name="images" 
+                                        id="images" 
+                                        class="form-control text-box" 
+                                        multiple>
+                                    </div>
+                                </div>
+                                
+                                <div class="form-group">
+                                    <div class="col-md-auto">
+                                        <button type="submit" class="btn btn-sm btn-primary p-2 mr-2">
+                                            <i class="fa fa-floppy-o"></i>
+                                            Save
+                                        </button>
+                                        <button type="reset" class="btn btn-sm btn-warning p-2 mr-2">
+                                            <i class="fa fa-repeat"></i>
+                                            Reset
+                                        </button>
+                                    </div>
+                                    
+                                </div>
+                                
+                                
+                            </form>
                         </div>
-                        
-                        <div class="form-group">
-                            <label class="col-md-auto control-label" for="quantity"><b>Quantity</b></label>
-                            <div class="col-md-auto">
-                                <input 
-                                    class="form-control text-box"
-                                    type="number"
-                                    id="quantity"
-                                    name="quantity"
-                                    placeholder="Enter the number of products"
-                                />
-                            </div>
-                        </div>
-                        
-                        <div class="form-group">
-                            <label class="col-md-auto control-label" for="regularPrice"><b>Regular Price</b></label>
-                            <div class="col-md-auto">
-                                <i class="fa fa-usd"></i>
-                                <input 
-                                    class="form-control text-box"
-                                    type="number"
-                                    id="regularPrice"
-                                    name="regularPrice"
-                                    placeholder="0.000"
-                                />
-                            </div>
-                        </div>
-                        
-                        <div class="form-group">
-                            <label class="col-md-auto control-label" for="discountPrice"><b>Discount Price</b></label>
-                            <div class="col-md-auto">
-                                <i class="fa fa-usd"></i>
-                                <input 
-                                class="form-control text-box"
-                                type="number"
-                                id="discountPrice"
-                                name="discountPrice"
-                                placeholder="0.000"
-                                />
-                            </div>
-                        </div>
-                        
-                        <div class="form-group">
-                            <label class="col-md-auto control-label" for="images"><i class="fa fa-picture-o"></i><b>Upload Product Images</b></label>
-                            <div class="col-md-auto">
-                                <input 
-                                type="file" 
-                                name="images" 
-                                id="images" 
-                                class="form-control text-box" 
-                                multiple>
-                            </div>
-                        </div>
-                        
-                        <div class="form-group">
-                            <div class="col-md-auto">
-                                <button type="submit" class="btn btn-sm btn-primary p-2 mr-2">
-                                    <i class="fa fa-floppy-o"></i>
-                                    Save
-                                </button>
-                                <button type="reset" class="btn btn-sm btn-warning p-2 mr-2">
-                                    <i class="fa fa-repeat"></i>
-                                    Reset
-                                </button>
-                            </div>
-                            
-                        </div>
-                        
-                        
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
+        
     </div>
+
 </div>
