--- a/views/home/product-detail.ejs
+++ b/views/home/product-detail.ejs
@@ -1,11 +1,11 @@
 <!-- breadcrumb -->
 <div class="bread-crumb bgwhite flex-w p-l-52 p-r-15 p-t-30 p-l-15-sm">
-    <a href="index.html" class="s-text16">
+    <a href="/" class="s-text16">
         Home
         <i class="fa fa-angle-right m-l-8 m-r-9" aria-hidden="true"></i>
     </a>
 
-    <a href="product.html" class="s-text16">
+    <a href="/products" class="s-text16">
         Women
         <i class="fa fa-angle-right m-l-8 m-r-9" aria-hidden="true"></i>
     </a>
@@ -30,19 +30,19 @@
                 <div class="slick3">
                     <div class="item-slick3" data-thumb="images/thumb-item-01.jpg">
                         <div class="wrap-pic-w">
-                            <img src="images/product-detail-01.jpg" alt="IMG-PRODUCT">
+                            <img src="<%= product[0].imageUrl[0] %>" alt="IMG-PRODUCT">
                         </div>
                     </div>
 
                     <div class="item-slick3" data-thumb="images/thumb-item-02.jpg">
                         <div class="wrap-pic-w">
-                            <img src="images/product-detail-02.jpg" alt="IMG-PRODUCT">
+                            <img src="<%= product[0].imageUrl[1] %>" alt="IMG-PRODUCT">
                         </div>
                     </div>
 
                     <div class="item-slick3" data-thumb="images/thumb-item-03.jpg">
                         <div class="wrap-pic-w">
-                            <img src="images/product-detail-03.jpg" alt="IMG-PRODUCT">
+                            <img src="<%= product[0].imageUrl[2] %>" alt="IMG-PRODUCT">
                         </div>
                     </div>
                 </div>
@@ -55,7 +55,7 @@
             </h4>
 
             <span class="m-text17">
-                $22
+                $<%= product[0].regularPrice %>
             </span>
 
             <p class="s-text8 p-t-10">
@@ -121,8 +121,8 @@
             </div>
 
             <div class="p-b-45">
-                <span class="s-text8 m-r-35">SKU: MUG-01</span>
-                <span class="s-text8">Categories: Mug, Design</span>
+                <span class="s-text8 m-r-35">SKU: <%= product[0].sku %></span>
+                <span class="s-text8">Categories: <%= product[0].categories %></span>
             </div>
 
             <!--  -->
@@ -135,7 +135,7 @@
 
                 <div class="dropdown-content dis-none p-t-15 p-b-23">
                     <p class="s-text8">
-                        Fusce ornare mi vel risus porttitor dignissim. Nunc eget risus at ipsum blandit ornare vel sed velit. Proin gravida arcu nisl, a dignissim mauris placerat
+                        <%= product[0].description %>
                     </p>
                 </div>
             </div>
