--- a/views/home/login.ejs
+++ b/views/home/login.ejs
@@ -1,3 +1,7 @@
+
+
+<a href="/auth/facebook">Facebook login</a>
+
 <div class="row mt-5">
   <div class="col-md-6 m-auto">
     <div class="card card-body" style="background-color:lightgray">
